--- a/Calculadora/css/styles.css
+++ b/Calculadora/css/styles.css
@@ -15,7 +15,7 @@
 .main{
   background-color: white;
   margin-left: 40%;
-  border: solid 1px;
+  border: solid 2px;
   width: 345px;
   height: 370px;
 
@@ -32,9 +32,15 @@
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
 }
+.textoResul{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  margin-right: 45px;
+  margin-left: 105px;
+}
 
   /* BOTÕES */
-.button, .divisao, .multiplicacao, .soma, .subtracao{
+.C, .divisao, .multiplicacao, .soma, .subtracao{
   background-color: darkgray;
   margin-left: 12px;
   margin-right: 2px;
@@ -72,11 +78,4 @@
   font-size: 30px;
   width: 211px;
   height: 50px;
-}
-
-.textoResul{
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-  margin-right: 45px;
-  margin-left: 105px;
 }
