--- a/Calculadora/css/styles.css
+++ b/Calculadora/css/styles.css
@@ -13,7 +13,7 @@
 
   /* TODA DIV */
 .main{
-  background-color: white;
+  background-color: dimgray;
   margin-left: 40%;
   border: solid 2px;
   width: 345px;
@@ -40,8 +40,19 @@
 }
 
   /* BOTÕES */
-.C, .divisao, .multiplicacao, .soma, .subtracao{
+.divisao, .multiplicacao, .soma, .subtracao{
   background-color: darkgray;
+  margin-left: 12px;
+  margin-right: 2px;
+  margin-top: 20px;
+  margin-bottom: 30px;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  font-size: 25px;
+}
+.C{
+  background-color: lightcoral;
   margin-left: 12px;
   margin-right: 2px;
   margin-top: 20px;
